Skin: Fix double border on treecols in breakpoints and syntax checking panes
(integrated from komodo (trunk) change 79894 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@12865 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/panes.less
+++ b/src/chrome/komodo/skin/plat/shared/panes.less
@@ -95,3 +95,8 @@ page toolbarseparator
     -moz-appearance: @pane-splitter-appearance !important;
     border-right: @pane-splitter-border;
 }
+
+:-moz-any(#klint-tree, #breakpoints-tree) treecol
+{
+    border-top: 0 !important;
+}
